--- a/src/modules/Features/colorful-frame.scss
+++ b/src/modules/Features/colorful-frame.scss
@@ -8,14 +8,24 @@
   --tab-container-background: hsla(var(--color-accent-hsl), 0.9);
   --titlebar-background: hsla(var(--color-accent-hsl), 0.9);
 }
-.anp-colorful-frame:not(.anp-card-layout) .mod-top .workspace-tab-header,
-.anp-colorful-frame:not(.anp-card-layout) .mod-top .workspace-tab-header.is-active,
-.anp-colorful-frame:not(.anp-card-layout) .mod-top .is-focused.workspace-tab-header,
-.anp-colorful-frame:not(.anp-card-layout) .mod-top .workspace-tab-header-container,
-.anp-colorful-frame:not(.anp-card-layout).is-focused .mod-top .workspace-tab-header.is-active {
+.anp-colorful-frame:not(.anp-card-layout) .mod-top:not(.mod-stacked) .workspace-tab-header,
+.anp-colorful-frame:not(.anp-card-layout) .mod-top:not(.mod-stacked) .workspace-tab-header.is-active,
+.anp-colorful-frame:not(.anp-card-layout) .mod-top:not(.mod-stacked) .is-focused.workspace-tab-header,
+.anp-colorful-frame:not(.anp-card-layout) .mod-top:not(.mod-stacked) .workspace-tab-header-container,
+.anp-colorful-frame:not(.anp-card-layout).is-focused .mod-top:not(.mod-stacked) .workspace-tab-header.is-active {
   --tab-text-color: var(--background-secondary-alt);
   --icon-color: var(--background-secondary-alt);
   --icon-color-hover: var(--background-secondary);
+}
+.anp-colorful-frame:not(.anp-card-layout) .mod-top.mod-stacked .workspace-tab-header-new-tab .clickable-icon {
+  --icon-color: var(--background-secondary-alt);
+  --icon-color-hover: var(--background-secondary);
+}
+.anp-colorful-frame:not(.anp-card-layout) .mod-top .workspace-tab-header-tab-list .clickable-icon,
+.anp-colorful-frame:not(.anp-card-layout) .mod-top .workspace-tab-header-new-tab .clickable-icon
+.anp-colorful-frame:not(.anp-card-layout) .mod-top .workspace-tab-header-tab-list .clickable-icon,
+.anp-colorful-frame:not(.anp-card-layout) .mod-top .workspace-tab-header-new-tab .clickable-icon:hover {
+  color: var(--background-secondary-alt);
 }
 .anp-colorful-frame:not(.anp-card-layout).anp-mini-tab-toggle .mod-top .workspace-tab-header,
 .anp-colorful-frame:not(.anp-card-layout).is-focused.anp-mini-tab-toggle .mod-top .workspace-tab-header.is-active {
@@ -35,14 +45,14 @@
 }
 .anp-colorful-frame:not(.anp-card-layout).is-focused.anp-mini-tab-toggle .mod-active .workspace-tab-header.is-active .workspace-tab-header-inner-icon,
 .anp-colorful-frame:not(.anp-card-layout).is-focused.anp-mini-tab-toggle .mod-active .workspace-tab-header.is-active .workspace-tab-header-inner-title,
-.anp-colorful-frame:not(.anp-card-layout).is-focused .mod-active .workspace-tab-header.is-active .workspace-tab-header-inner-icon,
+.anp-colorful-frame:not(.anp-card-layout).is-focused .mod-active:not(.mod-stacked) .workspace-tab-header.is-active .workspace-tab-header-inner-icon,
 .anp-colorful-frame:not(.anp-card-layout).is-focused.anp-mini-tab-toggle .mod-active .workspace-tab-header.is-active .workspace-tab-header-inner-title,
 .anp-colorful-frame:not(.anp-card-layout) .mod-left-split .workspace-tab-header:active .workspace-tab-header-inner-icon,
 .anp-colorful-frame:not(.anp-card-layout) .mod-right-split .workspace-tab-header:active .workspace-tab-header-inner-icon {
     color: var(--background-secondary-alt);
 }
-.anp-colorful-frame:not(.anp-card-layout).is-focused .mod-top .workspace-tab-header:not(.is-active),
-.anp-colorful-frame:not(.anp-card-layout) .mod-top .workspace-tab-header:not(.is-active):hover .workspace-tab-header-inner-close-button {
+.anp-colorful-frame:not(.anp-card-layout).is-focused .mod-top:not(.mod-stacked) .workspace-tab-header:not(.is-active),
+.anp-colorful-frame:not(.anp-card-layout) .mod-top:not(.mod-stacked) .workspace-tab-header:not(.is-active):hover .workspace-tab-header-inner-close-button {
     color: var(--background-secondary-alt);
     --tab-text-color-focused-active-current: var(--background-secondary-alt);
 }
