--- a/src/modules/Features/colorful-frame.scss
+++ b/src/modules/Features/colorful-frame.scss
@@ -45,7 +45,7 @@
 }
 .anp-colorful-frame:not(.anp-card-layout).is-focused.anp-mini-tab-toggle .mod-active .workspace-tab-header.is-active .workspace-tab-header-inner-icon,
 .anp-colorful-frame:not(.anp-card-layout).is-focused.anp-mini-tab-toggle .mod-active .workspace-tab-header.is-active .workspace-tab-header-inner-title,
-.anp-colorful-frame:not(.anp-card-layout).is-focused .mod-active:not(.mod-stacked) .workspace-tab-header.is-active .workspace-tab-header-inner-icon,
+.anp-colorful-frame:not(.anp-card-layout).is-focused .mod-active:not(.mod-stacked).mod-top .workspace-tab-header.is-active .workspace-tab-header-inner-icon,
 .anp-colorful-frame:not(.anp-card-layout).is-focused.anp-mini-tab-toggle .mod-active .workspace-tab-header.is-active .workspace-tab-header-inner-title,
 .anp-colorful-frame:not(.anp-card-layout) .mod-left-split .workspace-tab-header:active .workspace-tab-header-inner-icon,
 .anp-colorful-frame:not(.anp-card-layout) .mod-right-split .workspace-tab-header:active .workspace-tab-header-inner-icon {
@@ -65,7 +65,7 @@
   background-color: var(--background-primary);
   --tab-container-background: var(--background-primary) !important;
   height: calc(var(--header-height) - 5px);
-  margin-right: var(--size-4-1);
+  margin-right: 0;
   border-radius: 0 0 var(--radius-s) var(--radius-s);
   border-width: 0 1px 1px 1px;
   border-style: solid;
@@ -80,4 +80,13 @@
 .anp-colorful-frame:not(.anp-card-layout).anp-mini-tab-toggle.is-focused .mod-active.mod-top .workspace-tab-header.is-active .workspace-tab-header-inner-icon,
 .anp-colorful-frame:not(.anp-card-layout).anp-mini-tab-toggle.is-focused .mod-active.mod-top .workspace-tab-header.is-active .workspace-tab-header-inner-title {
     color: var(--background-primary);
+}
+
+//Fullscreen tweak
+.anp-colorful-frame:not(.anp-card-layout) .sidebar-toggle-button.mod-right {
+  border-radius: 0 0 0 var(--radius-s);
+}
+
+.anp-colorful-frame:not(.anp-card-layout).is-fullscreen:not(.is-popout-window) .sidebar-toggle-button.mod-left {
+  border-radius: 0 0 var(--radius-s) 0;
 }
