--- a/src/modules/Core/style-settings.scss
+++ b/src/modules/Core/style-settings.scss
@@ -126,9 +126,29 @@ settings:
         collapsed: true
     - 
         id: anp-colorful-frame
-        title: Toggle colorful frame (WIP)
-        description: Only works with default layout. Inspired by kepano's Minimal theme.
+        title: "Toggle colorful frame (WIP)"
+        description: "Only works with default layout. Inspired by kepano's Minimal theme."
         type: class-toggle
+    - 
+        id: anp-colorful-frame-opacity
+        title: Colorful frame opacity
+        type: variable-number-slider
+        default: 0.9
+        min: 0
+        max: 1
+        step: 0.05
+    -
+        id: anp-colorful-frame-color
+        title: Custom colorful frame color
+        type: variable-themed-color
+        format: "rgb-values"
+        opacity: false
+        default-light: '#'
+        default-dark: '#'
+        alt-format:
+            -
+                id: anp-colorful-frame-color-hsl
+                format: "hsl-values"
     - 
         id: anp-callout-header
         title: Callouts
