--- a/src/modules/Base/layouts.scss
+++ b/src/modules/Base/layouts.scss
@@ -1,12 +1,12 @@
 body.anp-card-layout,
 .anp-card-layout .sidebar-toggle-button,
 .anp-card-layout .workspace-tabs.mod-top {
-    --tab-container-background: rgb(var(--ctp-crust)) !important;
+    --tab-container-background: rgb(var(--ctp-crust));
 }
 body.is-focused.anp-card-layout,
 body.is-focused.anp-card-layout .sidebar-toggle-button,
 body.is-focused.anp-card-layout .workspace-tabs.mod-top {
-    --tab-container-background: rgb(var(--ctp-crust)) !important;
+    --tab-container-background: rgb(var(--ctp-crust));
 }
 .anp-card-layout .mod-left-split .workspace-tab-header-container {
     border-bottom: none;
@@ -21,16 +21,18 @@ body.is-focused.anp-card-layout .workspace-tabs.mod-top {
 .anp-card-layout .mod-root .workspace-tabs .workspace-leaf {
     background-color: var(--tab-container-background);
 }
-.anp-card-layout .workspace-ribbon.mod-left:before {
-    background-color: var(--tab-container-background) !important;
-}
 .anp-card-layout .workspace-ribbon.mod-left {
     padding: 0;
+
     background-color: var(--tab-container-background);
     border: none;
 }
+.anp-card-layout-actions.anp-card-layout .workspace-ribbon.mod-left {
+    margin-right: var(--anp-card-layout-padding, 10px);
+}
 .anp-card-layout .workspace-ribbon.mod-left:before {
     border-bottom: none;
+    background-color: var(--tab-container-background) !important;
 }
 .anp-card-layout .side-dock-actions {
     padding: var(--ribbon-padding);
@@ -39,6 +41,7 @@ body.is-focused.anp-card-layout .workspace-tabs.mod-top {
     border-radius: 0px var(--radius-xl) var(--radius-xl) 0px;
     border: 1px solid var(--tab-outline-color);
     background-color: var(--background-primary);
+    margin-top: 2px
 }
 .anp-card-layout-actions.anp-card-layout .side-dock-settings {
     border-radius: 0px var(--radius-xl) 0px 0px;
@@ -54,7 +57,6 @@ body.is-focused.anp-card-layout .workspace-tabs.mod-top {
 .anp-card-layout .workspace-tab-header-container {
     border-bottom: none;
 }
-
 .anp-card-layout .mod-vertical .workspace-tab-header-container {
     padding-left: 20px;
 }
@@ -63,13 +65,13 @@ body.is-focused.anp-card-layout .workspace-tabs.mod-top {
     z-index: 1;
 }
 .anp-card-layout .mod-vertical .workspace-tabs {
-    padding-left: 10px;
-    padding-right: 10px;
+    padding-left: var(--anp-card-layout-padding, 10px);
+    padding-right: var(--anp-card-layout-padding, 10px);
 }
 .anp-card-layout .mod-left-split .workspace-tab-container,
 .anp-card-layout .mod-right-split .workspace-tab-container {
-    padding-left: 10px;
-    padding-right: 10px;
+    padding-left: var(--anp-card-layout-padding, 10px);
+    padding-right: var(--anp-card-layout-padding, 10px);
     background-color: var(--tab-container-background);
 }
 .anp-card-layout .workspace-split.mod-left-split > .workspace-leaf-resize-handle,
@@ -90,19 +92,21 @@ body.is-focused.anp-card-layout .workspace-tabs.mod-top {
     border-radius: var(--radius-xl);
     background-color: var(--background-primary);
     border: 1px solid var(--tab-outline-color);
-    margin-bottom: 10px;
+    margin-bottom: var(--anp-card-layout-padding, 10px);
 }
 .anp-card-layout.anp-card-shadows .workspace-split .workspace-leaf-content {
-    box-shadow: 0 4px 3px 2px rgba(0,0,0,0.06);
+    box-shadow: 0 2px 6px 2px rgba(0,0,0,0.2);
 }
-.anp-card-layout.anp-card-shadows .workspace-split .workspace-leaf-content[data-type="file-explorer"] {
+.anp-card-layout .workspace-split .workspace-leaf-content[data-type="file-explorer"] {
     background-color: var(--tab-container-background);
     box-shadow: none;
     border-width: 0px;
 }
 .anp-card-layout.anp-card-layout-filebrowser.anp-card-shadows .workspace-split  .workspace-leaf-content[data-type="file-explorer"] {
+    box-shadow: 0 2px 6px 2px rgba(0,0,0,0.2);
+}
+.anp-card-layout.anp-card-layout-filebrowser .workspace-split  .workspace-leaf-content[data-type="file-explorer"] {
     background-color: var(--background-primary);
-    box-shadow: 0 4px 3px 2px rgba(0,0,0,0.06);
     border-width: 1px;
 }
 .anp-card-layout .workspace-split .mod-stacked .workspace-leaf-content {
@@ -130,7 +134,7 @@ body.is-focused.anp-card-layout .workspace-tabs.mod-top {
     border-radius: 0 var(--radius-xl) var(--radius-xl) 0;
 }
 .anp-card-layout .mod-stacked .workspace-tab-container {
-    padding-bottom: 10px;
+    padding-bottom: var(--anp-card-layout-padding, 10px);
 }
 .anp-card-layout .mod-top .workspace-leaf-resize-handle {
     border-color: transparent;
