--- a/src/modules/Tabs/safari-tabs.scss
+++ b/src/modules/Tabs/safari-tabs.scss
@@ -51,10 +51,14 @@
 .anp-alternate-tab-toggle .mod-root:not(.mod-left-split):not(.mod-right-split) .workspace-tabs:not(.mod-stacked) .workspace-tab-header-inner {
   padding: 7px 8px;
 }
-.anp-alternate-tab-toggle .mod-root:not(.mod-left-split):not(.mod-right-split) .workspace-tabs:not(.mod-stacked) .workspace-tab-header-inner {
-  padding: 0 4px 0 8px;
-  color: var(--text-muted);
-  transition: 400ms;
+.anp-alternate-tab-toggle .mod-root:not(.mod-left-split):not(.mod-right-split) .workspace-tabs:not(.mod-stacked){
+  .workspace-tab-header-inner {
+    padding: 0 4px 0 8px;
+    transition: 400ms;
+  }
+  .workspace-tab-header-inner, .workspace-tab-header-inner-close-button, .workspace-tab-header-inner-icon {
+    color: var(--text-muted);
+  }
 }
 .anp-alternate-tab-toggle .workspace .mod-root .workspace-tab-header-inner::after {
   display: none;
@@ -68,16 +72,16 @@
   color: var(--color-accent);
 }
 .anp-alternate-tab-toggle .mod-root .workspace-tabs:not(.mod-stacked) .workspace-tab-header.is-active {
-  .workspace-tab-header-inner, .workspace-tab-header-inner-title  {
-    color: var(--text-normal);
+  .workspace-tab-header-inner, .workspace-tab-header-inner-title, .workspace-tab-header-inner-close-button, .workspace-tab-header-inner-icon  {
+    color: var(--text-faint);
   }
   .workspace-tab-header-inner:hover {
     background-color: rgba(var(--ctp-surface1), 0.4);
   }
 }
 .anp-alternate-tab-toggle .mod-root .workspace-tabs:not(.mod-stacked).mod-active .workspace-tab-header.is-active {
-  .workspace-tab-header-inner, .workspace-tab-header-inner-title  {
-    color: var(--color-accent);
+  .workspace-tab-header-inner, .workspace-tab-header-inner-title, .workspace-tab-header-inner-close-button, .workspace-tab-header-inner-icon  {
+    color: var(--color-accent) !important;
   }
 }
 .anp-alternate-tab-toggle .mod-root .workspace-tabs:not(.mod-stacked) .workspace-tab-header.is-active:hover {
