--- a/theme.css
+++ b/theme.css
@@ -1340,6 +1340,10 @@ body {
   background-color: var(--background-secondary-alt);
 }
 
+.workspace-split:not(.mod-root) .graph-controls.is-close {
+  background-color: var(--background-primary);
+}
+
 body.anp-card-layout,
 .anp-card-layout .sidebar-toggle-button,
 .anp-card-layout .workspace-tabs.mod-top {
@@ -1733,6 +1737,10 @@ hr {
 .anp-table-toggle .markdown-rendered table, .anp-table-toggle .markdown-rendered td, .anp-table-toggle .markdown-rendered th, .anp-table-toggle .markdown-rendered thead tr > th:first-child, .anp-table-toggle .markdown-rendered thead tr > th, .anp-table-toggle .markdown-rendered thead tr > th:last-child {
   text-align: center;
   border: 2px solid var(--table-border-color);
+}
+
+.anp-table-toggle .table-view-table > tbody > tr:hover {
+  background-color: rgba(var(--ctp-surface1), 0.1) !important;
 }
 
 .anp-table-auto.markdown-rendered table {
@@ -2461,6 +2469,27 @@ body.anp-colorful-frame.anp-card-layout .workspace,
 /*-Fix dataview table header size-*/
 .table-view-table > thead > tr > th {
   font-size: medium;
+  color: var(--text-muted);
+}
+
+.dataview.inline-field-standalone-value, .dataview.inline-field-key, .dataview.inline-field-value {
+  padding-left: 0px;
+  padding-right: 0px;
+  font-family: inherit;
+  background-color: transparent;
+  color: var(--text-normal);
+}
+
+.dataview.inline-field-standalone-value, .dataview.inline-field-value {
+  text-decoration: underline;
+  text-decoration-line: underline;
+  text-decoration-color: rgba(var(--ctp-yellow), 0.4);
+}
+
+.dataview.inline-field-key {
+  font-weight: bold;
+  color: var(--bold-color);
+  padding-right: 8px;
 }
 
 .kanban-plugin__lane-items > .kanban-plugin__placeholder:only-child {
