--- a/src/modules/Features/colorful-frame.scss
+++ b/src/modules/Features/colorful-frame.scss
@@ -208,3 +208,19 @@ body.anp-colorful-frame.anp-card-layout .workspace,
   border-radius: var(--radius-m);
   opacity: 0.5;
 }
+.anp-colorful-frame {
+  --titlebar-background: var(--color-accent);
+  --titlebar-background-focused: var(--color-accent);
+  --titlebar-text-color: var(--background-primary);
+  --titlebar-text-color-focused: var(--background-secondary-alt);
+}
+.anp-colorful-frame.is-hidden:not(.is-hidden-frameless) {
+  .sidebar-toggle-button.mod-right, .sidebar-toggle-button.mod-left {
+    border-radius: var(--radius-m);
+  }
+}
+.anp-colorful-frame:not(.is-hidden) {
+  .sidebar-toggle-button.mod-right, .sidebar-toggle-button.mod-left {
+    border-radius: var(--radius-m);
+  }
+}
