Make borders more accessible in card layout

--- a/src/modules/Base/layouts.scss
+++ b/src/modules/Base/layouts.scss
@@ -2,6 +2,7 @@ body.anp-card-layout,
 .anp-card-layout .sidebar-toggle-button,
 .anp-card-layout .workspace-tabs.mod-top {
     --tab-container-background: rgb(var(--ctp-crust));
+    --file-header-border: var(--border-width) dashed var(--background-modifier-border);
 }
 body.is-focused.anp-card-layout,
 body.is-focused.anp-card-layout .sidebar-toggle-button,
@@ -76,17 +77,14 @@ body.is-focused.anp-card-layout .workspace-tabs.mod-top {
 }
 .anp-card-layout .workspace-split.mod-left-split > .workspace-leaf-resize-handle,
 .anp-card-layout .workspace-split.mod-right-split > .workspace-leaf-resize-handle {
-    border-left-style: dashed;
-    border-right: none;
-    border-width: 1px;
+    border-style: solid;
+    border-width: 2px;
+    border-color: transparent;
 }
 .anp-card-layout .workspace-split.mod-horizontal > * > .workspace-leaf-resize-handle {
-    border-style: dashed;
-    border-color: var(--tab-outline-color);
-    border-width: 2px 0px 0px 0px !important;
-    height: 0px !important;
-    width: 30%;
-    margin-left: 35% !important;
+    border-style: solid;
+    border-color: transparent;
+    border-width: 2px;
 }
 .anp-card-layout .workspace-split .workspace-leaf-content {
     border-radius: var(--radius-xl);
