--- a/src/modules/Core/style-settings.scss
+++ b/src/modules/Core/style-settings.scss
@@ -479,6 +479,10 @@ settings:
         title: Enable custom metadata button
         type: class-toggle
     - 
+        id: anp-floating-header
+        title: Enable floating vault title
+        type: class-toggle
+    - 
         id: anp-custom-vault-toggle
         title: Enable custom vault title
         type: class-toggle
