--- a/theme.css
+++ b/theme.css
@@ -2181,7 +2181,7 @@ body.anp-colorful-frame.anp-card-layout .workspace-ribbon.mod-left:before,
   --titlebar-background: hsla(var(--anp-colorful-frame-color-hsl, var(--color-accent-hsl)), var(--anp-colorful-frame-opacity, 1));
 }
 
-.anp-colorful-frame {
+.anp-colorful-frame.anp-card-layout {
   --divider-color-hover: var(--background-secondary-alt);
 }
 
